tests/baselines/reference/typeParameterInConstraint1.errors.txt
tests/cases/compiler/typeParameterInConstraint1.ts(1,12): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.


==== tests/cases/compiler/typeParameterInConstraint1.ts (1 errors) ====
    class C<T, U extends T> {
               ~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
    }